src/test/deca/context/invalid/intermediaire2/boolean/01cmp-boolean-int.deca
{
    int x = 5
    if (true == x){
        print("should not print");
    }
}